--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^1.4.3",
+    "react-controller": "^1.2.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "swiper": "^6.4.11",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
