--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Back-End",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +16,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15"
-  }
+  },
+  "description": ""
 }
