--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -1,46 +1,55 @@
 {
-    "name": "lammah",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.11.9",
-        "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^12.6.3",
-        "axios": "^0.21.1",
-        "bootstrap": "^4.6.0",
-        "formik": "^2.2.6",
-        "jwt-decode": "^3.1.2",
-        "react": "^17.0.1",
-        "react-bootstrap": "^1.4.3",
-        "react-calendar": "^3.3.1",
-        "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.2",
-        "web-vitals": "^1.1.0",
-        "yup": "^0.32.8"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "lammah",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
+    "bootstrap-icons-react": "^1.0.0",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-bootstrap-icons": "^1.3.0",
+    "react-calendar": "^3.3.1",
+    "react-dom": "^17.0.1",
+    "react-formik-ui": "^5.1.3",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.2",
+    "web-vitals": "^1.1.0",
+    "yub": "^0.11.1",
+    "yup": "^0.32.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
