--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.3.0",
     "bootstrap-icons-react": "^1.0.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
