--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "url": "https://git.generalassemb.ly/Project-4-Explorers/Lammah.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.16"
+  }
 }
