--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -13,6 +13,7 @@
     "bootstrap-switch-button-react": "^1.2.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
+    "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "nodemon": "^2.0.7",
