--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "cors": "^2.8.5",
+    "dompurify": "^2.2.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16"
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.16",
+    "react-bootstrap": "^1.4.3",
+    "react-calendar": "^3.3.1",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.2.0"
   }
 }
