--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -20,17 +20,22 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
     "google-maps-react": "^2.0.6",
+    "i18next": "^19.8.8",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.0",
+    "i18next-xhr-backend": "^3.2.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.3.0",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-formik-ui": "^5.1.3",
+    "react-i18next": "^11.8.7",
     "react-icons": "^4.2.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
