--- a/Front-End/lammah/package.json
+++ b/Front-End/lammah/package.json
@@ -20,6 +20,7 @@
     "draft-js": "^0.11.7",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
+    "google-map-react": "^2.1.9",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
